Update index.html and other files

--- a/Downloads/shipify-logistics-4/package.json
+++ b/Downloads/shipify-logistics-4/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/sanjaybsarode/Logistics-Website-APP",
+  "homepage": "https://sanjaybsarode.github.io/Logistics-Website-APP",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:gh": "vite build --base=/Logistics-Website-APP/",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
